[ADD] Add header navbar display

--- a/index.html
+++ b/index.html
@@ -8,7 +8,31 @@
     <link rel="stylesheet" href="./src/css/style.css" />
   </head>
   <body>
-    <h1>ALPHA-Shop</h1>
+    <header>
+      <nav class="navbar">
+        <label class="navbar__toggle-label" for="navbar__toggle">
+          <img
+            src="./src/image/nav/bx_bx-menu-alt-left@2x.png"
+            alt=""
+            class="navbar__hamburger d-inline"
+          />
+        </label>
+        <input
+          type="checkbox"
+          id="navbar__toggle"
+          class="navbar__toggle d-none"
+        />
+        <img
+          src="./src/image/nav/Logo@2x.png"
+          alt=""
+          class="navbar__brand d-inline"
+        />
+      </nav>
+    </header>
+
+    <main></main>
+
+    <footer></footer>
 
     <script src="./src/scripts/index.js"></script>
   </body>
