[ADD] Add section btn-control html & scss

--- a/index.html
+++ b/index.html
@@ -289,7 +289,12 @@
           </div>
         </div>
       </section>
-      <section class="container btn-control"></section>
+      <section class="container btn-control">
+        <div class="btn-control-panel d-flex justify-content-between align-items-center">
+          <button class="btn-control-panel__btn-prev check">上一步</button>
+          <button class="btn-control-panel__btn-next active">下一步</button>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
