[ADD] Add footer display

--- a/index.html
+++ b/index.html
@@ -299,7 +299,47 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="wrapper">
+        <section>
+          <img src="./src/image/nav/Logo@2x.png" alt="" class="footer__brand">
+        </section>
+        <section>
+          <a href="#" class="footer__title">客戶服務</a>
+          <a href="#" class="footer__item">運送說明</a>
+          <a href="#" class="footer__item">退換貨相關</a>
+          <a href="#" class="footer__item">付款資訊</a>
+          <a href="#" class="footer__item">FAQ</a>
+        </section>
+        <section>
+          <a href="#" class="footer__title">關於我們</a>
+          <a href="#" class="footer__item">品牌故事</a>
+          <a href="#" class="footer__item">媒體聯繫</a>
+          <a href="#" class="footer__item">Press kit</a>
+        </section>
+        <section>
+          <a href="#" class="footer__title">資訊</a>
+          <a href="#" class="footer__item">隱私權政策</a>
+          <a href="#" class="footer__item">Cookie</a>
+          <a href="#" class="footer__item">GDPR</a>
+        </section>
+        <section>
+          <a href="#" class="footer__title">追蹤 ALPHA Shop</a>
+          <a href="#" class="footer__item">+886 02123-45678</a>
+          <div class="footer__social-media">
+            <a href="#">
+              <img src="./src/image/footer/facebook@2x.png" alt="" class="footer__social-media__icon">
+            </a>
+            <a href="#">
+              <img src="./src/image/footer/ig@2x.png" alt="" class="footer__social-media__icon">
+            </a>
+            <a href="#">
+              <img src="./src/image/footer/phone@2x.png" alt="" class="footer__social-media__icon">
+            </a>
+          </div>
+        </section>
+      </div>
+    </footer>
 
     <script src="./src/scripts/index.js"></script>
   </body>
