--- a/index.html
+++ b/index.html
@@ -16,45 +16,55 @@
   <body>
     <header>
       <nav class="navbar">
-        <section class="navbar__left">
-          <label class="navbar__toggle-label" for="navbar__toggle">
-            <img
-              src="./src/image/nav/bx_bx-menu-alt-left@2x.png"
-              alt=""
-              class="navbar__hamburger"
-            />
-          </label>
-          <input
-            type="checkbox"
-            id="navbar__toggle"
-            class="navbar__toggle d-none"
+        <label class="navbar__toggle-label" for="navbar__toggle">
+          <img
+            src="./src/image/nav/bx_bx-menu-alt-left@2x.png"
+            alt=""
+            class="navbar__hamburger"
           />
-          <section class="navbar__nav-list">
-            <a href="#" class="navbar__nav-list__item">男款</a>
-            <a href="#" class="navbar__nav-list__item">女款</a>
-            <a href="#" class="navbar__nav-list__item">最新消息</a>
-            <a href="#" class="navbar__nav-list__item">客製商品</a>
-            <a href="#" class="navbar__nav-list__item">聯絡我們</a>
-          </section>
-        </section>
+        </label>
+        <input
+          type="checkbox"
+          id="navbar__toggle"
+          class="navbar__toggle d-none"
+        />
+        <ul class="navbar__nav-list">
+          <li class="navbar__nav-list__item">
+            <a href="#" class="navbar__nav-list__link">男款</a>
+          </li>
+          <li class="navbar__nav-list__item">
+            <a href="#" class="navbar__nav-list__link">女款</a>
+          </li>
+          <li class="navbar__nav-list__item">
+            <a href="#" class="navbar__nav-list__link">最新消息</a>
+          </li>
+          <li class="navbar__nav-list__item">
+            <a href="#" class="navbar__nav-list__link">客製商品</a>
+          </li>
+          <li class="navbar__nav-list__item">
+            <a href="#" class="navbar__nav-list__link">聯絡我們</a>
+          </li>
+          <li class="navbar__nav-list__item">
+            <section class="navbar__tool-list">
+              <a href="#">
+                <img src="./src/image/nav/search@2x.png" alt="" class="navbar__tool-list__item">
+              </a>
+              <a href="#">
+                <img src="./src/image/nav/cart@2x.png" alt="" class="navbar__tool-list__item">
+              </a>
+              <a href="#">
+                <img src="./src/image/nav/mode@2x.png" alt="" class="navbar__tool-list__item">
+              </a>
+            </section>
+          </li>
+        </ul>
         <section>
           <img
             src="./src/image/nav/Logo@2x.png"
             alt=""
             class="navbar__brand"
           />
-        </section>
-        <section class="navbar__tool-list">
-          <a href="#">
-            <img src="./src/image/nav/search@2x.png" alt="" class="navbar__tool-list__item">
-          </a>
-          <a href="#">
-            <img src="./src/image/nav/cart@2x.png" alt="" class="navbar__tool-list__item">
-          </a>
-          <a href="#">
-            <img src="./src/image/nav/mode@2x.png" alt="" class="navbar__tool-list__item">
-          </a>
-        </section>
+        </section>  
       </nav>
     </header>
 
